Changed PDF to save as a file

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 			doc.setFontSize(16);
 			doc.text(20, 30, 'This is some normal sized text underneath.');
 			
-			//doc.save('filename.pdf');
-			doc.output('datauri');
+			doc.output('save', 'filename.pdf');
+			//doc.output('datauristring');
 			//doc.output('dataurlnewwindow');
 		}
 	</script>
