--- a/index.html
+++ b/index.html
@@ -22,32 +22,10 @@
 			doc.setFontSize(16);
 			doc.text(20, 30, 'Olá');
 			
-			doc.output('save', 'filename.pdf');
-			//doc.output('datauri');
+			//doc.output('save', 'filename.pdf');
+			doc.output('datauri');
 			//doc.output('datauristring');
 			//doc.output('dataurlnewwindow');
-		}
-		
-		// Wait for device API libraries to load
-		document.addEventListener("deviceready", onDeviceReady, false);
-
-		// device APIs are available
-		//
-		function onDeviceReady() {
-			window.requestFileSystem(LocalFileSystem.PERSISTENT, 0, onFileSystemSuccess, fail);
-			window.resolveLocalFileSystemURI("file:///example.txt", onResolveSuccess, fail);
-		}
-
-		function onFileSystemSuccess(fileSystem) {
-			console.log(fileSystem.name);
-		}
-
-		function onResolveSuccess(fileEntry) {
-			console.log(fileEntry.name);
-		}
-
-		function fail(evt) {
-			console.log(evt.target.error.code);
 		}
 	</script>
 	
